links to open in new tabs

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -981,301 +981,6 @@ const search = () => {
 }
 
 
-function oldSearch() {
-  table.clear();
-  
-  // handle advanced search
-  // first, is advanced search on?
-  let searchSelectvalue = document.getElementById('searchSelect').value
-  if (advancedSearch.classList.contains('show')) {
-    
-    if (searchSelectvalue && searchSelectvalue === 'title') {
-      if (advancedSearchField.value.length > 0){
-        query += ' title:' + advancedSearchField.value + '~1';
-        query += ' title_alternative_keywords:' + advancedSearchField.value + '~1' ;
-      } 
-      
-    }
-    
-    //“Printers” AND “Publishers” AND “Booksellers”
-    if (searchSelectvalue && searchSelectvalue === 'stationer') {
-      if (advancedSearchField.value.length > 0){
-        query += ' stationer_printer:' + advancedSearchField.value + '~1';
-        query += ' stationer_publisher:' + advancedSearchField.value + '~1' ;
-        query += ' stationer_bookseller:' + advancedSearchField.value + '~1' ;
-      } 
-      
-    }
-
-    //“Dedication” AND “Commendatory Verses” AND “To the Reader” AND “Argument” AND “Character List” AND “Actor List” AND “Explicit” AND “Errata” AND “Other Paratexts”
-    if (searchSelectvalue && searchSelectvalue === 'paratextual') {
-      if (advancedSearchField.value.length > 0){
-        query += ' paratext_dedication:' + advancedSearchField.value + '~1';
-        query += ' paratext_commendatory_verses:' + advancedSearchField.value + '~1' ;
-        query += ' paratext_to_the_reader:' + advancedSearchField.value + '~1' ;
-        query += ' paratext_argument:' + advancedSearchField.value + '~1' ;
-        query += ' paratext_actor_list:' + advancedSearchField.value + '~1' ;
-        query += ' paratext_charachter_list:' + advancedSearchField.value + '~1' ;
-        query += ' title_page_explicit:' + advancedSearchField.value + '~1' ;
-        query += ' paratext_errata:' + advancedSearchField.value + '~1' ;
-        query += ' paratext_other_paratexts:' + advancedSearchField.value + '~1' ;
-    
-      } 
-      
-    }
-    if (searchSelectvalue && searchSelectvalue === 'commendatory-verses') {
-      if (advancedSearchField.value.length > 0){
-        query += 'paratext_commendatory_verses:' + advancedSearchField.value + '~1';
-      } 
-      
-    }
-
-    if (searchSelectvalue && searchSelectvalue === 'title-page-modern') {
-      if (advancedSearchField.value.length > 0){
-        query += 'title_page_modern_spelling:' + advancedSearchField.value + '~1';
-      } 
-      
-    }
-    if (searchSelectvalue && searchSelectvalue === 'imprintlocation') {
-      if (advancedSearchField.value.length > 0){
-        query += 'title_page_imprint:' + advancedSearchField.value + '~1';
-      } 
-      
-    }
-    if (searchSelectvalue && searchSelectvalue === 'title-page-old') {
-      if (advancedSearchField.value.length > 0){
-        query += 'title_page_title:' + advancedSearchField.value + '~1' ;
-        query += ' title_page_author:' + advancedSearchField.value + '~1';
-        query += ' title_page_performance:' + advancedSearchField.value + '~1';
-        query += ' title_page_latin_motto:' + advancedSearchField.value + '~1';
-        query += ' title_page_imprint:' + advancedSearchField.value + '~1';
-      } 
-      
-    }
-    if (searchSelectvalue && searchSelectvalue === 'title-page-author') {
-      if (advancedSearchField.value.length > 0){
-        query += ' title_page_author:' + advancedSearchField.value + '~1';
-      } 
-      
-    }
-    if (searchSelectvalue && searchSelectvalue === 'actor-list') {
-      if (advancedSearchField.value.length > 0){
-        query += ' paratext_actor_list:' + advancedSearchField.value + '~1';
-      } 
-      
-    }
-    if (searchSelectvalue && searchSelectvalue === 'explicit') {
-      if (advancedSearchField.value.length > 0){
-        query += ' title_page_explicit:' + advancedSearchField.value + '~1';
-      } 
-      
-    }
-
-    // title_page_modern_spelling
-    
-    if (searchSelectvalue && searchSelectvalue === 'toreader') {
-      if (advancedSearchField.value.length > 0){
-        query += ' paratext_to_the_reader:' + advancedSearchField.value ;
-      } 
-      
-    }
-    if (searchSelectvalue && searchSelectvalue === 'argument') {
-      if (advancedSearchField.value.length > 0){
-        query += ' paratext_argument:' + advancedSearchField.value ;
-      } 
-      
-    }
-    if (searchSelectvalue && searchSelectvalue === 'dedication') {
-      if (advancedSearchField.value.length > 0){
-        query += ' paratext_dedication:' + advancedSearchField.value + '~1';
-      } 
-      
-    }
-    if (searchSelectvalue && searchSelectvalue === 'charachter-list') {
-      if (advancedSearchField.value.length > 0){
-        query += ' paratext_charachter_list:' + advancedSearchField.value + '~1';
-      } 
-      
-    }
-    if (searchSelectvalue && searchSelectvalue === 'errata') {
-      if (advancedSearchField.value.length > 0){
-        query += ' paratext_errata:' + advancedSearchField.value + '~1';
-      } 
-      
-    }
-    if (searchSelectvalue && searchSelectvalue === 'other-paratexts') {
-      if (advancedSearchField.value.length > 0){
-        query += ' paratext_other_paratexts:' + advancedSearchField.value + '~1';
-      } 
-      
-    }
-    if (searchSelectvalue && searchSelectvalue === 'illustration') {
-      if (advancedSearchField.value.length > 0){
-        query += ' title_page_illustration:' + advancedSearchField.value + '~1';
-      } 
-      
-    }
-    if (searchSelectvalue && searchSelectvalue === 'latinontitle') {
-      if (advancedSearchField.value.length > 0){
-        query += ' title_page_latin_motto:' + advancedSearchField.value + '~1';
-      } 
-      
-    }
-    
-    
-  }
-  
-  results = []
-  // logic for title-edition-record filtering 
-  search_results = index.search(query)
-  results = []
-  // logic for title-edition-record filtering 
-  let filter = radioHelper();
-  if (filter == 'title') {
-    search_results.forEach(function(result) {
-      results.push(item_data[result.ref])
-    });
-    let groups = groupBy(results, 'greg');
-    
-    results = []
-    for (i in groups) {
-      if (groups[i].length == 1) {
-        results.push(groups[i][0])
-      } else {
-        // sort the group by deep_id, return only lowest deep id
-        let d = groups[i].sort((a,b) => a.deep_id - b.deep_id);
-        results.push(d[0])
-      }
-    }
-  } else if (filter == 'edition') {
-    // load data for each result 
-    search_results.forEach(function(result) {
-      results.push(item_data[result.ref])
-    });
-    let groups = groupBy(results, 'greg_middle');
-    
-    results = []
-    for (i in groups) {
-      if (groups[i].length == 1) {
-        results.push(groups[i][0])
-      } else {
-        // sort the group by deep_id, return only lowest deep id
-        let d = groups[i].sort((a,b) => a.deep_id - b.deep_id);
-        // TODO add variant data to d 
-        results.push(d[0])
-      }
-      
-      
-    };
-    
-  } else if (filter == 'record') {
-    search_results.forEach(function(result) {
-      results.push(item_data[result.ref])
-    });
-  }
-
-
-  // filter by record type
-  if (advancedSearch.classList.contains('show')) {
-    if (!singlePlay.checked) {
-      results = results.filter(item => item.record_type != 'Single-Play Playbook')
-    }
-    if (!Collections.checked) {
-      results = results.filter(item => item.record_type != 'Collection')
-    }
-    if (!PlaysinCollections.checked) {
-      results = results.filter(item => item.record_type != 'Play in Collection')
-    }
-  }
-  // advanced search filters 
-  
-  if (searchSelectvalue && searchSelectvalue === 'deep-id') {
-      results = results.filter(item => item.deep_id.includes(advancedSearchField.value))
-  }
-  if (searchSelectvalue && searchSelectvalue === 'greg_number') {
-      results = results.filter(item => item.greg_full.includes(advancedSearchField.value))
-  }
-  if (searchSelectvalue && searchSelectvalue === 'book_edition') {
-      results = results.filter(item => item.book_edition.includes(advancedSearchField.value))
-  }
-  if (searchSelectvalue && searchSelectvalue === 'play_edition') {
-      results = results.filter(item => item.play_edition.includes(advancedSearchField.value))
-  }
-  if (searchSelectvalue && searchSelectvalue === 'stc_or_wing') {
-      results = results.filter(item => item.stc.includes(advancedSearchField.value))
-  }
-  if (searchSelectvalue && searchSelectvalue === 'author') {
-      results = results.filter(item => item.author_id.includes(choices.getValue(true)))
-  }
-  if (searchSelectvalue && searchSelectvalue === 'authorial-status') {
-      results = results.filter(x => x.author_status).filter(item => item.author_status.includes(choices.getValue().label))
-  }
-  if (searchSelectvalue && searchSelectvalue === 'blackletter') {
-      results = results.filter(item => item.blackletter.includes(choices.getValue().label))
-  }
-  if (searchSelectvalue && searchSelectvalue === 'genre') {
-      results = results.filter(item => item.genre.includes(choices.getValue().label))
-  }
-  if (searchSelectvalue && searchSelectvalue === 'format') {
-      results = results.filter(item => item.format.includes(choices.getValue().label))
-  }
-  if (searchSelectvalue && searchSelectvalue === "playtype") {
-      results = results.filter(item => item.play_type.includes(choices.getValue().label))
-  }
-  if (searchSelectvalue && searchSelectvalue === "company-first-performance") {
-      // includes filter to remove items where first company is null
-      results = results.filter(x => x.company_first_performance).filter(item => item.company_first_performance.includes(choices.getValue().label))
-  }
-  if (searchSelectvalue && searchSelectvalue === "company") {
-      results = results.filter(item => item.company_id == choices.getValue().value)
-  }
-  if (searchSelectvalue && searchSelectvalue === 'dedication') {
-      results = results.filter(item => item.paratext_dedication.includes(advancedSearchField.value))
-  }
-  if (searchSelectvalue && searchSelectvalue === 'printer') {
-      results = results.filter(item => item.stationer_printer.includes(advancedSearchField.value))
-  }
-  if (searchSelectvalue && searchSelectvalue === 'publisher') {
-      results = results.filter(item => item.stationer_publisher.includes(advancedSearchField.value))
-  }
-  if (searchSelectvalue && searchSelectvalue === 'bookseller') {
-      results = results.filter(item => item.stationer_bookseller.includes(advancedSearchField.value))
-  }
-  if (searchSelectvalue && searchSelectvalue === 'authorial-status') {
-      results = results.filter(item => item.stationer_bookseller.includes(advancedSearchField.value))
-  }
-  
-  if (searchSelectvalue && searchSelectvalue === 'theater') {
-      results = results.filter(item => item.theater_type.includes(choices.getValue().label) || item.theater.includes(choices.getValue().label))
-      
-  }
-  
-  if (searchSelectvalue && searchSelectvalue === 'first-production') {
-      let current_range = slider.noUiSlider.get()
-      let start_range = current_range[0]
-      let end_range = current_range[1]
-      results = results.filter(item =>  item.composition_date >= start_range && item.composition_date <= end_range)
-      
-  }
-  
-  if (searchSelectvalue && searchSelectvalue === 'first-edition') {
-      let current_range = slider.noUiSlider.get()
-      let start_range = current_range[0]
-      let end_range = current_range[1]
-      results = results.filter(item =>  item.date_first_publication >= start_range && item.date_first_publication <= end_range)
-      
-  }
-
-  if (searchSelectvalue && searchSelectvalue === 'year-published') {
-      let current_range = slider.noUiSlider.get()
-      let start_range = current_range[0]
-      let end_range = current_range[1]
-      results = results.filter(item =>  item.year_int >= start_range && item.year_int <= end_range)
-      
-  }
-  table.add(results);
-  table.update();
-};
 
 
           
@@ -1322,7 +1027,7 @@ function expand(e, id) {
           <div class="row">
             <div class="col-5">
               <p>
-                ${!data.deep_id ? '' : '<span class="expand">DEEP #: </span><span id="deep_id">' + data.deep_id + '</span><br>'}
+                ${!data.deep_id ? '' : '<span class="expand">DEEP #: </span><span id="deep_id"><a target="_blank" href="'+ data.deep_id +'.html">' + data.deep_id + '</a></span><br>'}
                 ${!data.greg_full ? '' : '<span class="expand">Greg #: </span><span id="greg_full">' + data.greg_full + '</span><br>'}
                 ${!data.stc ? '' : '<span class="expand">STC/WING: </span><span id="stc"> ' + data.stc + '</span><br>'}
                 ${!data.book_edition ? '' : '<span class="expand">Book Edition: </span><span id="book_edition"> ' + data.book_edition + '</span><br>'}
@@ -1333,7 +1038,7 @@ function expand(e, id) {
                 ${data.variants === '' ? '' : '<br><span class="expand">Variants:</span><span id="variants"> ' + data.variants + ' ' + data.variant_link + '<br>'}
                 ${data.in_collection === '' ? '' : '<br><span class="expand">In Collection:</span><span id="in_collection"> ' + data.in_collection + '</span><br>'}
                 ${data.collection_contains === '' ? '' : '<br><span class="expand">Collection Contains:</span><span id="collection_contains"> ' + data.collection_contains + '</span><br>'}
-                ${!data.independent_playbook ? '' : '<br><span class="expand">Also appears as a bibliographically independent playbook in </span><span id="independent_playbook"><a href="' + data.independent_playbook_link_id + '.html">' + data.independent_playbook + '</a></span><br>'}
+                ${!data.independent_playbook ? '' : '<br><span class="expand">Also appears as a bibliographically independent playbook in </span><span id="independent_playbook"><a target="_blank" href="' + data.independent_playbook_link_id + '.html">' + data.independent_playbook + '</a></span><br>'}
                 ${!data.also_in_collection ? '' : '<br><span class="expand">Also appears in collection: </span><span id="also_in_collection">' + data.also_in_collection_link + '</span><br>'}
               </p>
             </div>
