--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -455,16 +455,16 @@ function addANDBlock() {
   const min_year = {{ min_year|safe }}
   const max_year = {{ max_year|safe }}
   let template = `
-    <div id="andORButtons" class="btn-group" style="visibility:collapse;" role="group" aria-label="Basic radio toggle button group">
+    <div id="andORButtons" class="btn-group" style="visibility:collapse;" role="group">
         <!-- Add new filter box 
           The top box has option to add AND OR
           Each child has a disabled button with the operator selected, and a remove button
         -->
                   
         <input type="radio" class="btn-check" name="addAND" id="addAND" autocomplete="off" disabled >
-          <label class="btn btn-sm  " for="addAND">and</label>              
+          <label class="btn btn-sm" for="addAND">and</label>              
             <input type="radio" class="btn-check btn-outline-dark" name="removeBlock" id="removeBlock" autocomplete="off">
-            <label class="btn btn-sm  " for="removeBlock"><i id="removeFilterBlock" class="bi bi-dash-circle" ></i></label>
+            <label class="btn btn-sm" for="removeBlock"><i id="removeFilterBlock" class="bi bi-dash-circle" ></i></label>
     </div>
     <div>
       <select id="searchSelect" class="input-group form-select form-select-sm">
@@ -584,7 +584,7 @@ function addANDBlock() {
   removeButton.style.visibility = 'visible';
   removeButton.addEventListener('click', function handleClick(event) {
     removeFilterBlock('filterBlock-'+document.getElementById('filterBlocks').childElementCount);
-});
+  });
 }
 
 function addORBlock() {
@@ -600,7 +600,7 @@ function addORBlock() {
         <input type="radio" class="btn-check" name="addAND" id="addAND" autocomplete="off" disabled >
           <label class="btn btn-sm  " for="addAND">and</label>              
             <input type="radio" class="btn-check btn-outline-dark" name="removeBlock" id="removeBlock" autocomplete="off">
-            <label class="btn btn-sm  " for="removeBlock"><i id="removeFilterBlock" class="bi bi-dash-circle" ></i></label>
+            <label class="btn btn-sm" for="removeBlock"><i id="removeFilterBlock" class="bi bi-dash-circle" ></i></label>
     </div>
           <div class="border border-dark rounded border-2">
       <select id="searchSelect" class="input-group form-select form-select-sm">
@@ -739,40 +739,64 @@ function addORBlock() {
   //let newBlock = document.getElementById('filterBlocks').lastElementChild
   newBlock.id = 'filterBlock-'+document.getElementById('filterBlocks').childElementCount
   // <div id="filterBlock" class="input-group-md">
+    newBlock.dataset.type = "OR"
   
   
-  // listen for changes to searchSelect
+  // First input
+  let searchSelect1 = newBlock.children[1].children[0]
+  searchSelect1.addEventListener('change', (event) => {
+    update_searchSelect(searchSelect1);
+  })
+  let thisSearchField1 = newBlock.children[1].children[1]
+  thisSearchField1.addEventListener('keyup', (event) => {
+    search();
+  });
+
+  let thisChoicesSelect1 = newBlock.children[1].children[2]
+  thisChoicesSelect1.addEventListener('change', (event) => {
+    search();
+  });
+
+  let beginDateSelect1 = newBlock.children[1].children[5].children[1]
+  beginDateSelect1.addEventListener('keyup', (event) => {
+    search();
+  });
+
+  let endDateSelect1 = newBlock.children[1].children[5].children[3]
+  endDateSelect1.addEventListener('keyup', (event) => {
+    search();
+  });
   
-  let searchSelect = newBlock.children[1]
-  update_searchSelect(searchSelect);
-  searchSelect.addEventListener('change', (event) => {
-    update_searchSelect(searchSelect);
+  // Second input
+  let searchSelect2 = newBlock.children[1].children[7]
+  searchSelect2.addEventListener('change', (event) => {
+    update_searchSelect(searchSelect2);
   })
 
-  let thisSearchField = newBlock.children[2]
-  thisSearchField.addEventListener('keyup', (event) => {
+  let thisSearchField2 = newBlock.children[1].children[8]
+  thisSearchField2.addEventListener('keyup', (event) => {
     search();
   });
 
-  let thisChoicesSelect = newBlock.children[3]
-  thisChoicesSelect.addEventListener('change', (event) => {
+  let thisChoicesSelect2 = newBlock.children[1].children[9]
+  thisChoicesSelect2.addEventListener('change', (event) => {
     search();
   });
 
-  let beginDateSelect = newBlock.children[6].children[1]
-  beginDateSelect.addEventListener('keyup', (event) => {
+  let beginDateSelect2 = newBlock.children[1].children[12].children[1]
+  beginDateSelect2.addEventListener('keyup', (event) => {
     search();
   });
 
-  let endDateSelect = newBlock.children[6].children[3]
-  endDateSelect.addEventListener('keyup', (event) => {
+  let endDateSelect2 = newBlock.children[1].children[12].children[3]
+  endDateSelect2.addEventListener('keyup', (event) => {
     search();
   });
   
   let removeButton = newBlock.children[0].children[3]
   removeButton.style.visibility = 'visible';
   removeButton.addEventListener('click', function handleClick(event) {
-    removeFilterBlock('filterBlock-'+document.getElementById('filterBlocks').childElementCount);
+    removeFilterBlock(newBlock.id);
   });
 }
 
