--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -182,7 +182,6 @@ let choice_fields = ['author','authorial-status','company-first-performance','co
               
 
 const update_searchSelect = searchSelect => {
-  
     let filter = searchSelect.value 
     let searchField = searchSelect.parentElement.children[1]
     
@@ -192,17 +191,6 @@ const update_searchSelect = searchSelect => {
     this_years.classList.add('d-none')
 
     let choicesSelect = searchSelect.parentElement.children[2]
-    this_choices = new Choices(choicesSelect,{
-        addItems: false,
-        shouldSort: false,
-        shouldSortItems: false,
-        allowHTML: true,
-        position: 'bottom',
-        placeholder: 'Select an option',
-      })
-    
-    
-    
     
     searchSelect.dataset.name = filter
     // search fields
@@ -211,20 +199,25 @@ const update_searchSelect = searchSelect => {
       
       searchField.style.display = "block";
       this_years.classList.add('d-none')
-      this_choices.destroy()
       choicesSelect.style.display = "none";
     }
     // date fields
     if (date_fields.indexOf(filter) > -1) {
       searchField.style.display = "none";
       this_years.classList.remove("d-none");
-      this_choices.destroy()
       choicesSelect.style.display = "none";
     }
 
     // choice fields
     if (filter === 'author') { 
-      
+      this_choices = new Choices(choicesSelect,{
+        addItems: false,
+        shouldSort: false,
+        shouldSortItems: false,
+        allowHTML: true,
+        position: 'bottom',
+        placeholder: 'Select an option',
+      }) 
       searchField.style.display = "none";
       this_years.classList.add('d-none')
       choicesSelect.style.display = "block";
@@ -242,7 +235,14 @@ const update_searchSelect = searchSelect => {
       });
     }
     if (filter === 'authorial-status') { 
-
+      this_choices = new Choices(choicesSelect,{
+        addItems: false,
+        shouldSort: false,
+        shouldSortItems: false,
+        allowHTML: true,
+        position: 'bottom',
+        placeholder: 'Select an option',
+      })
       searchField.style.display = "none";
       this_years.classList.add("d-none");
       choicesSelect.style.display = "block";
@@ -263,7 +263,14 @@ const update_searchSelect = searchSelect => {
     }
     if (filter === 'format') { 
       // hide advancedSearchField
-      
+      this_choices = new Choices(choicesSelect,{
+        addItems: false,
+        shouldSort: false,
+        shouldSortItems: false,
+        allowHTML: true,
+        position: 'bottom',
+        placeholder: 'Select an option',
+      })
       searchField.style.display = "none";
       this_years.classList.add("d-none");
       choicesSelect.style.display = "block";
@@ -285,7 +292,14 @@ const update_searchSelect = searchSelect => {
 
     if (filter === 'blackletter') { 
       // hide advancedSearchField
-      
+      this_choices = new Choices(choicesSelect,{
+        addItems: false,
+        shouldSort: false,
+        shouldSortItems: false,
+        allowHTML: true,
+        position: 'bottom',
+        placeholder: 'Select an option',
+      })
       searchField.style.display = "none";
       this_years.classList.add("d-none");
       choicesSelect.style.display = "block";
@@ -304,6 +318,14 @@ const update_searchSelect = searchSelect => {
     }
     if (filter === 'genre') { 
       // hide advancedSearchField
+      this_choices = new Choices(choicesSelect,{
+        addItems: false,
+        shouldSort: false,
+        shouldSortItems: false,
+        allowHTML: true,
+        position: 'bottom',
+        placeholder: 'Select an option',
+      })
       searchField.style.display = "none";
       this_years.classList.add("d-none");
       choicesSelect.style.display = "block";
@@ -321,6 +343,14 @@ const update_searchSelect = searchSelect => {
       });
     }
     if (filter === 'playtype') {
+      this_choices = new Choices(choicesSelect,{
+        addItems: false,
+        shouldSort: false,
+        shouldSortItems: false,
+        allowHTML: true,
+        position: 'bottom',
+        placeholder: 'Select an option',
+      })
       searchField.style.display = "none";
       this_years.classList.add("d-none");
       choicesSelect.style.display = "block";
@@ -340,6 +370,14 @@ const update_searchSelect = searchSelect => {
       
     }
     if (filter === 'theater') {
+      this_choices = new Choices(choicesSelect,{
+        addItems: false,
+        shouldSort: false,
+        shouldSortItems: false,
+        allowHTML: true,
+        position: 'bottom',
+        placeholder: 'Select an option',
+      })
       searchField.style.display = "none";
       this_years.classList.add("d-none");
       choicesSelect.style.display = "block";
@@ -357,6 +395,14 @@ const update_searchSelect = searchSelect => {
       });
     }
     if (filter === 'company-first-performance') {
+      this_choices = new Choices(choicesSelect,{
+        addItems: false,
+        shouldSort: false,
+        shouldSortItems: false,
+        allowHTML: true,
+        position: 'bottom',
+        placeholder: 'Select an option',
+      })
       searchField.style.display = "none";
       this_years.classList.add("d-none");
       choicesSelect.style.display = "block";
@@ -376,6 +422,14 @@ const update_searchSelect = searchSelect => {
       
     }
     if (filter === 'company') {
+      this_choices = new Choices(choicesSelect,{
+        addItems: false,
+        shouldSort: false,
+        shouldSortItems: false,
+        allowHTML: true,
+        position: 'bottom',
+        placeholder: 'Select an option',
+      })
       searchField.style.display = "none";
       this_years.classList.add("d-none");
       choicesSelect.style.display = "block";
@@ -401,11 +455,8 @@ const getQueries = () => {
   let query = []
   let blocks = document.getElementById('filterBlocks')
 
-  
   for (let i = 0; i < blocks.children.length; i++) {
-    
     let block = blocks.children[i]
-    
     // get AND OR operator 
     let blockType = block.dataset.type
     if (blockType == 'AND') {
@@ -413,8 +464,11 @@ const getQueries = () => {
       
       // is a search field 
       if (search_fields.indexOf(searchField) > -1) {
+        
         let searchValue = block.children[1].children[1].value
+        
         if (searchValue) {
+          console.log('push block', block)
           query.push({"searchField":searchField, "searchValue":searchValue, "blockType":blockType})
         }
       }
@@ -434,13 +488,14 @@ const getQueries = () => {
       
     }
     if (blockType == 'OR') {
+      // TODO complete this
       console.log('is or block')
     }  
     console.log('is query', query)
-    return query
     
-  // return an array of filter functions
-}}
+  }
+  return query
+}
 
 function removeFilterBlock(id) {
   let myParent = document.getElementById(id);
@@ -662,6 +717,7 @@ function addORBlock() {
         <span class="input-group-text">End:</span>
         <input type="number" aria-label="end-date" value="${max_year}" pattern="\d{4}"  maxlength="4" class="form-control"></input>
       </div>
+      
       <label class="btn btn-sm  " for="addAND">or</label> 
                  
       <select id="searchSelect" class="input-group form-select form-select-sm">
